# stonks

./: .golangci.yml  go.mod
golang/practice-1-0/base/12.func-closure/: main.go
golang/practice-2-0/: general.md
golang/practice-2-0/array-slice/: main.go
golang/practice-2-0/concurrency/: concur-patterns.md  main.go  patterns.md
golang/practice-2-0/errors/: main.go
golang/practice-2-0/generics/: main.go
golang/practice-2-0/http/: http-concepts.md  main.go
golang/practice-2-0/http-tcp/: http-patterns.md  main.go
golang/practice-2-0/io-os-bufio/: main.go
golang/practice-2-0/map/: main.go
golang/practice-2-0/mini-projects/: projects.md
golang/practice-2-0/strings-runes-bytes/: main.go
golang/practice-2-0/struct/: main.go
golang/sobes/: inter-abcp.md  inter-rostelecom.md  inter-sber.md  inter-solidlab.md  legend_actual.md  legend_improve.md  legend_old.md  questions-balun.md  questions-nazarov.md  сопроводительные.txt
golang/sobes/vk/: tech.md
golang/tasks/test/: main.go
golang/theory/microservice/: base.md
js/js-hello/: index.js  package.json
python/: main.py  pyproject.toml
python/practice/1.variable-types/: main.py
python/practice/2.input_output_conditions/: main.py
python/practice/3.loops/: main.py
python/practice/4.functions/: main.py
python/practice/5.lists/: main.py
python/practice/6.tuples/: main.py
python/practice/7.sets/: main.py
python/practice/8.dictionaries/: main.py
python/practice/theory/: 1.md  setup.md
sysdis/: 0-general-tasks.md
sysdis/theory/week-1/: 2025-08-24-day-1.md  week-1.md
(+85 files in other folders)
