[project]
name = "stonks-python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.18.1",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
